--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
         <use xlink:href="./svg/floppy.svg#floppy"></use>
       </svg>
 
-      <p class="button__text">Сохранить на память</p>
+      <span class="button__text">Сохранить на память</span>
     </button>
     <dialog id="popup" class="popup_window_container">
       <div class="popup_window__content_container">
