--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
               <blockquote>
-                Ихняя вас надувай! Путь через ядро планеты - большоой бум-бум...
+                Ихняя вас надувать! Путь через ядро планеты - бооольшой
+                бум-бум...
               </blockquote>
             </div>
             <div class="content-card__button-container">
@@ -690,7 +691,7 @@
                 полностью не получится, но это тот случай, когда важен сам
                 процесс познания. Ведь часто путь — и есть результат.
               </p>
-              <blockquote>Да пребудет с нами Сила...</blockquote>
+              <blockquote>Да прибудет с нами Сила...</blockquote>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
