--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 проникнуться основами и настроиться на учёбу. И, возможно,
                 подумать, как новые знания могут повлиять на ваше будущее.
               </p>
-              <blockquote>
-                Знаешь, я и сам пилот. И когда-нибудь я улечу отсюда прочь.
-              </blockquote>
+              <q>
+                Знаешь, я и сам пилот. И когда-нибудь я улечу отсюда прочь
+              </q>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -181,10 +181,10 @@
                 вопросы: с чего начать? а вдруг будет слишком сложно? что, если
                 я не справлюсь?
               </p>
-              <blockquote>
+              <q>
                 Я не чуствовал в тебе такого напряжения с тех пор как мы
-                свалились в гнездо гандорков.
-              </blockquote>
+                свалились в гнездо гандорков
+              </q>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -265,10 +265,9 @@
                 Радость могла быстро померкнуть и смениться ожиданием провала.
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
-              <blockquote>
-                Ихняя вас надувать! Путь через ядро планеты - бооольшой
-                бум-бум...
-              </blockquote>
+              <q>
+                Ихняя вас надувай! Путь через ядро планеты - боольшой бум-бум..
+              </q>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -351,7 +350,7 @@
                 вовсе и не подвержены перфекционизму и вместо того, чтобы
                 сделать идеально, старались просто сделать.
               </p>
-              <blockquote>Делай. Или не делай. Никаких попыток.</blockquote>
+              <q>Делай. Или не делай. Никаких попыток</q>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -435,10 +434,10 @@
                 поддавался. Осваивать что-то новое легче, когда рядом есть
                 единомышленники, не правда ли?
               </p>
-              <blockquote>
+              <q>
                 Клоны выращиваются, а не собираются. Они гораздо надежнее
-                дройдов.
-              </blockquote>
+                дройдов
+              </q>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -519,10 +518,10 @@
                 момент вам могло показаться, что решения просто иссякли. Значит,
                 пришло время посмотреть на задачу под другим углом.
               </p>
-              <blockquote>
+              <q>
                 Да летать-то пожалуйста, но то что вытворяешь ты - это просто
                 самоубийство!
-              </blockquote>
+              </q>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -605,9 +604,9 @@
                 пожить. В такие моменты очень нужна концентрация. Вспомните,
                 откуда вы её черпали.
               </p>
-              <blockquote>
-                Ты выполняешь свое предназначение. Великим ситхом ты станешь.
-              </blockquote>
+              <q>
+                Ты выполняешь свое предназначение. Великим ситхом ты станешь
+              </q>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
@@ -691,7 +690,7 @@
                 полностью не получится, но это тот случай, когда важен сам
                 процесс познания. Ведь часто путь — и есть результат.
               </p>
-              <blockquote>Да прибудет с нами Сила...</blockquote>
+              <q>Да прибудет с нами Сила...</q>
             </div>
             <div class="content-card__button-container">
               <button type="button" class="card__icon-button">
