checkout_final+additional_functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
 
   <body class="page">
-    <header class="header block">
+    <header class="header block" id="top">
       <a class="header__logo">&lt;/html&gt;</a>
       <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
@@ -143,6 +143,13 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
+            <nav class="back-to-top_link-container">
+              <a href="#top" class="back-to-top_link"
+                ><span class="back-to-top_link_text"
+                  >навер<span class="uparrow_link">х</span>▲</span
+                >
+              </a>
+            </nav>
           </article>
         </li>
 
@@ -230,6 +237,11 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
+            <nav class="back-to-top_link-container">
+              <a href="#top" class="back-to-top_link"
+                ><span> навер<span class="uparrow_link">х</span>▲</span>
+              </a>
+            </nav>
           </article>
         </li>
 
@@ -313,6 +325,11 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
+            <nav class="back-to-top_link-container">
+              <a href="#top" class="back-to-top_link"
+                ><span> навер<span class="uparrow_link">х</span>▲</span>
+              </a>
+            </nav>
           </article>
         </li>
 
@@ -396,6 +413,11 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
+            <nav class="back-to-top_link-container">
+              <a href="#top" class="back-to-top_link"
+                ><span> навер<span class="uparrow_link">х</span>▲</span>
+              </a>
+            </nav>
           </article>
         </li>
 
@@ -483,6 +505,11 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
+            <nav class="back-to-top_link-container">
+              <a href="#top" class="back-to-top_link"
+                ><span> навер<span class="uparrow_link">х</span>▲</span>
+              </a>
+            </nav>
           </article>
         </li>
 
@@ -567,6 +594,11 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
+            <nav class="back-to-top_link-container">
+              <a href="#top" class="back-to-top_link"
+                ><span> навер<span class="uparrow_link">х</span>▲</span>
+              </a>
+            </nav>
           </article>
         </li>
 
@@ -652,6 +684,11 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
+            <nav class="back-to-top_link-container">
+              <a href="#top" class="back-to-top_link"
+                ><span> навер<span class="uparrow_link">х</span>▲</span>
+              </a>
+            </nav>
           </article>
         </li>
 
@@ -736,6 +773,11 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
+            <nav class="back-to-top_link-container">
+              <a href="#top" class="back-to-top_link"
+                ><span> навер<span class="uparrow_link">х</span>▲</span>
+              </a>
+            </nav>
           </article>
         </li>
       </ul>
@@ -769,5 +811,23 @@
     </dialog>
 
     <script src="./scripts/like.js"></script>
+
+    <!-- ======================================================================================  -->
+    <!-- ======================================================================================  -->
+    <!-- ======================================================================================  -->
+
+    <button
+      id="backToTop"
+      class="button_global-style back-to-top_button"
+      onclick="location.href='#top'"
+    >
+      <span class="button__text back-to-top_button_text">
+        навер<span class="uparrow_button">х</span>▲</span
+      >
+    </button>
+
+    <script src="./scripts/scroll.js"></script>
+
+    <!-- ======================================================================================  -->
   </body>
 </html>
