checkout_final+additional_functionality_fixes+

--- a/index.html
+++ b/index.html
@@ -143,13 +143,17 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link-container">
+            <!-- =========================== ADDITIONAL FUNCTIONALITY =================================  -->
+            <!-- ======================================================================================  -->
+
+            <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top_link_text"
-                  >навер<span class="uparrow_link">х</span>▲</span
-                >
+                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
               </a>
             </nav>
+
+            <!-- ======================================================================================  -->
+            <!-- ======================================================================================  -->
           </article>
         </li>
 
@@ -237,9 +241,9 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link-container">
+            <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span> навер<span class="uparrow_link">х</span>▲</span>
+                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
               </a>
             </nav>
           </article>
@@ -325,9 +329,9 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link-container">
+            <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span> навер<span class="uparrow_link">х</span>▲</span>
+                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
               </a>
             </nav>
           </article>
@@ -413,9 +417,9 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link-container">
+            <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span> навер<span class="uparrow_link">х</span>▲</span>
+                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
               </a>
             </nav>
           </article>
@@ -505,9 +509,9 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link-container">
+            <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span> навер<span class="uparrow_link">х</span>▲</span>
+                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
               </a>
             </nav>
           </article>
@@ -594,9 +598,9 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link-container">
+            <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span> навер<span class="uparrow_link">х</span>▲</span>
+                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
               </a>
             </nav>
           </article>
@@ -684,9 +688,9 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link-container">
+            <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span> навер<span class="uparrow_link">х</span>▲</span>
+                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
               </a>
             </nav>
           </article>
@@ -773,9 +777,9 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link-container">
+            <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span> навер<span class="uparrow_link">х</span>▲</span>
+                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
               </a>
             </nav>
           </article>
@@ -812,22 +816,20 @@
 
     <script src="./scripts/like.js"></script>
 
-    <!-- ======================================================================================  -->
-    <!-- ======================================================================================  -->
+    <!-- =========================== ADDITIONAL FUNCTIONALITY =================================  -->
     <!-- ======================================================================================  -->
 
     <button
-      id="backToTop"
-      class="button_global-style back-to-top_button"
+      id="back-to-top"
+      class="button_global-style button_back-to-top"
       onclick="location.href='#top'"
     >
-      <span class="button__text back-to-top_button_text">
-        навер<span class="uparrow_button">х</span>▲</span
-      >
+      <span class="button__text"> наверх</span>
     </button>
 
     <script src="./scripts/scroll.js"></script>
 
+    <!-- ======================================================================================  -->
     <!-- ======================================================================================  -->
   </body>
 </html>
