--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
             <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
+                ><span class="back-to-top-arrow">наверх</span>
               </a>
             </nav>
 
@@ -243,7 +243,7 @@
             </div>
             <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
+                ><span class="back-to-top-arrow">наверх</span>
               </a>
             </nav>
           </article>
@@ -331,7 +331,7 @@
             </div>
             <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
+                ><span class="back-to-top-arrow">наверх</span>
               </a>
             </nav>
           </article>
@@ -419,7 +419,7 @@
             </div>
             <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
+                ><span class="back-to-top-arrow">наверх</span>
               </a>
             </nav>
           </article>
@@ -511,7 +511,7 @@
             </div>
             <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
+                ><span class="back-to-top-arrow">наверх</span>
               </a>
             </nav>
           </article>
@@ -600,7 +600,7 @@
             </div>
             <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
+                ><span class="back-to-top-arrow">наверх</span>
               </a>
             </nav>
           </article>
@@ -690,7 +690,7 @@
             </div>
             <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
+                ><span class="back-to-top-arrow">наверх</span>
               </a>
             </nav>
           </article>
@@ -779,7 +779,7 @@
             </div>
             <nav class="back-to-top_link_container">
               <a href="#top" class="back-to-top_link"
-                ><span>навер<span class="back-to-top_link_text">х</span>▲</span>
+                ><span class="back-to-top-arrow">наверх</span>
               </a>
             </nav>
           </article>
@@ -824,7 +824,7 @@
       class="button_global-style button_back-to-top"
       onclick="location.href='#top'"
     >
-      <span class="button__text"> наверх</span>
+      <span class="button__text back-to-top-arrow">наверх</span>
     </button>
 
     <script src="./scripts/scroll.js"></script>
