checkout_final+additional_functionality_final+

--- a/index.html
+++ b/index.html
@@ -146,11 +146,9 @@
             <!-- =========================== ADDITIONAL FUNCTIONALITY =================================  -->
             <!-- ======================================================================================  -->
 
-            <nav class="back-to-top_link_container">
-              <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top-arrow">наверх</span>
-              </a>
-            </nav>
+            <a href="#top" class="back-to-top_link"
+              ><span class="back-to-top-arrow">наверх</span>
+            </a>
 
             <!-- ======================================================================================  -->
             <!-- ======================================================================================  -->
@@ -241,11 +239,10 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link_container">
-              <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top-arrow">наверх</span>
-              </a>
-            </nav>
+
+            <a href="#top" class="back-to-top_link"
+              ><span class="back-to-top-arrow">наверх</span>
+            </a>
           </article>
         </li>
 
@@ -329,11 +326,10 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link_container">
-              <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top-arrow">наверх</span>
-              </a>
-            </nav>
+
+            <a href="#top" class="back-to-top_link"
+              ><span class="back-to-top-arrow">наверх</span>
+            </a>
           </article>
         </li>
 
@@ -417,11 +413,10 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link_container">
-              <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top-arrow">наверх</span>
-              </a>
-            </nav>
+
+            <a href="#top" class="back-to-top_link"
+              ><span class="back-to-top-arrow">наверх</span>
+            </a>
           </article>
         </li>
 
@@ -509,11 +504,10 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link_container">
-              <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top-arrow">наверх</span>
-              </a>
-            </nav>
+
+            <a href="#top" class="back-to-top_link"
+              ><span class="back-to-top-arrow">наверх</span>
+            </a>
           </article>
         </li>
 
@@ -598,11 +592,10 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link_container">
-              <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top-arrow">наверх</span>
-              </a>
-            </nav>
+
+            <a href="#top" class="back-to-top_link"
+              ><span class="back-to-top-arrow">наверх</span>
+            </a>
           </article>
         </li>
 
@@ -688,11 +681,10 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link_container">
-              <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top-arrow">наверх</span>
-              </a>
-            </nav>
+
+            <a href="#top" class="back-to-top_link"
+              ><span class="back-to-top-arrow">наверх</span>
+            </a>
           </article>
         </li>
 
@@ -777,11 +769,10 @@
                 <span class="button__text">Like</span>
               </button>
             </div>
-            <nav class="back-to-top_link_container">
-              <a href="#top" class="back-to-top_link"
-                ><span class="back-to-top-arrow">наверх</span>
-              </a>
-            </nav>
+
+            <a href="#top" class="back-to-top_link"
+              ><span class="back-to-top-arrow">наверх</span>
+            </a>
           </article>
         </li>
       </ul>
@@ -820,6 +811,7 @@
     <!-- ======================================================================================  -->
 
     <button
+      type="button"
       id="back-to-top"
       class="button_global-style button_back-to-top"
       onclick="location.href='#top'"
