--- a/index.html
+++ b/index.html
@@ -784,7 +784,11 @@
       onclick="window['popup'].showModal()"
       aria-controls="popup"
     >
-      <svg class="floppy-icon">
+      <svg
+        class="floppy-icon"
+        viewBox="0 0 21 21"
+        fill="var(--button-text_hover-color, rgba(255, 255, 255, 1))"
+      >
         <use xlink:href="./svg/floppy.svg#floppy"></use>
       </svg>
 
@@ -792,7 +796,11 @@
     </button>
     <dialog id="popup" class="popup_window_container">
       <div class="popup_window__content_container">
-        <svg class="popup_window__floppy-icon">
+        <svg
+          class="popup_window__floppy-icon"
+          viewBox="0 0 21 21"
+          fill="var(--button-text_hover-color, rgba(255, 255, 255, 1))"
+        >
           <use xlink:href="./svg/floppy.svg#floppy"></use>
         </svg>
         <p class="popup_window__title">Вставьте дискету, чтобы продолжить</p>
